[project]
name = "unreported"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "atproto>=0.0.61",
    "joblib>=1.5.1",
    "pillow>=11.3.0",
    "pymupdf>=1.26.3",
    "pysbd>=0.3.4",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "tweepy>=4.16.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
]
